--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie_api",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.0.5",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2"
   },
